# controllers/contacts.js
@@ -3,7 +3,8 @@ const mongodb = require('../db/connect');
 
 
 const getAll = async (req, res) => {
-  try{
+    //#swagger.tags=['Contacts']
+    try{
     const result = await mongodb.getDb().db('testdb').collection('contacts').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
@@ -15,7 +16,8 @@ const getAll = async (req, res) => {
 };
 
 const getOne = async (req, res) => {
-  try {
+    //#swagger.tags=['Contacts']
+    try {
     const userId = new ObjectId(req.params.id);
   const result = await mongodb.getDb().db('testdb').collection('contacts').find({ _id: userId });
   result.toArray().then((lists) => {
@@ -28,7 +30,8 @@ const getOne = async (req, res) => {
 };
 
 const createContact = async (req, res) => {
-  try{ 
+    //#swagger.tags=['Contacts']
+    try{ 
     const contact = {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
@@ -48,7 +51,8 @@ if (response.acknowledged) {
 };
 
 const updateContact = async (req, res) => {
-  try { 
+    //#swagger.tags=['Contacts']
+    try { 
   const userId = new ObjectId(req.params.id);
   const contact = {
     firstName: req.body.firstName,
@@ -70,7 +74,8 @@ if (response.acknowledged) {
 };
 
 const deleteContact = async (req, res) => {
-  try{
+    //#swagger.tags=['Contacts']
+    try{
     const userId = new ObjectId(req.params.id);
   const response = await mongodb.getDb().db('testdb').collection('contacts').deleteOne({_id: userId }, true);
   console.log(response);
